--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 		<link href="css/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
 		<link rel="stylesheet" href="asset/font-awesome/css/font-awesome.min.css">
 		<link href="css/style.css" rel="stylesheet" media="screen">
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="bootstrap/js/custom.js"></script>
+
 		<title>"Julie Alary Personal One Page Site"</title>
 		<!--[if lt IE 9]>
 			<link rel="stylesheet" type="text/css"href="ie-lt9.css">
@@ -34,7 +38,7 @@
 		</nav>
 		
 		<header role="main" id="jumbotron">
-			<h1 class="text-center"><strong>Julie Alary<br/><br/>Learning Front & Back-end <br/><br/>@ <a href="http://www.objectif3w.com">Objectif 3W</strong></h1>  		
+			<h1 class="text-center"><strong>Julie Alary<br/><br/>Learning Front & Back-end <br/><br/>@ <a href="http://www.objectif3w.com">Objectif 3W</a></strong></h1>  		
 		</header>
 		
 		<section role="main" id="portfolio"class="container-fluid">
@@ -67,29 +71,29 @@
     			<p><strong>My skills :</p>
     		</div>
   			<div class="row">
-    			<div class="col-xs-3 col-md-3"><img src="http://img15.hostingpics.net/pics/764804html5couleur.png" class="img-responsive" alt="Responsive image"/></div>
-    			<div class="col-xs-3 col-md-3"><img src="http://img15.hostingpics.net/pics/434266css3couleur.png" class="img-responsive" alt="Responsive image"/></div>
-    			<div class="col-xs-3 col-md-3"><img src="http://img15.hostingpics.net/pics/351739JScouleur.png" class="img-responsive" alt="Responsive image"/></div>
-    			<div class="col-xs-3 col-md-3"><img src="http://img15.hostingpics.net/pics/196240phpcouleur.png"class="img-responsive" alt="Responsive image"/></div>
+    			<div class="col-xs-3 col-md-3"><img src="http://img15.hostingpics.net/pics/764804html5couleur.png" class="img-responsive center-block" alt="logo html5"/></div>
+    			<div class="col-xs-3 col-md-3"><img src="http://img15.hostingpics.net/pics/434266css3couleur.png" class="img-responsive center-block" alt="logo css3"/></div>
+    			<div class="col-xs-3 col-md-3"><img src="http://img15.hostingpics.net/pics/351739JScouleur.png" class="img-responsive center-block" alt="logo javascript"/></div>
+    			<div class="col-xs-3 col-md-3"><img src="http://img15.hostingpics.net/pics/196240phpcouleur.png"class="img-responsive center-block" alt="logo php"/></div>
   			</div>
  			<div class="row">
-    			<div class="col-xs-3 col-md-3"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ea/Boostrap_logo.svg/2000px-Boostrap_logo.svg.png" class="img-responsive" alt="Responsive image"/></div>
-    			<div class="col-xs-3 col-md-3"><img src="http://rubyonrails.org/images/rails-logo.svg" class="img-responsive rails" alt="Responsive image" /></div>
-    			<div class="col-xs-3 col-md-3"><img src="http://img08.deviantart.net/7f09/i/2013/008/1/9/ruby_by_sakatagintoki117-d5qwq2l.png" class="img-responsive" alt="Responsive image"  /></div>
-    			<div class="col-xs-3 col-md-3"><img src="https://git-scm.com/images/logos/downloads/Git-Icon-1788C.png" class="img-responsive" alt="Responsive image"  /></div>
+    			<div class="col-xs-3 col-md-3"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ea/Boostrap_logo.svg/2000px-Boostrap_logo.svg.png" class="img-responsive center-block" alt="logo bootstrap"/></div>
+    			<div class="col-xs-3 col-md-3"><img src="http://rubyonrails.org/images/rails-logo.svg" class="img-responsive rails center-block" alt="Logo Ruby on rails" /></div>
+    			<div class="col-xs-3 col-md-3"><img src="http://img08.deviantart.net/7f09/i/2013/008/1/9/ruby_by_sakatagintoki117-d5qwq2l.png" class="img-responsive center-block" alt="logo rails"  /></div>
+    			<div class="col-xs-3 col-md-3"><img src="https://git-scm.com/images/logos/downloads/Git-Icon-1788C.png" class="img-responsive center-block" alt="logo git"  /></div>
   			</div>
 		</section>
 
 		<section role="main"id="contact">
-    		<div class="htitle">
+    		<div class="title">
       			<h2>[Contact me] [Follow me] [fork me] [...]</h2>
     		</div>
     		<div class="row">
-      			<div class="col-xs-2 col-md-2"><a href="https://twitter.com/julie_alary"target="_blank"><img src="https://pbs.twimg.com/profile_images/666407537084796928/YBGgi9BO.png" class="img-responsive" alt="logo twitter"/></a></div>
-      			<div class="col-xs-2 col-md-2"><a href="https://www.facebook.com/julie.alary1" target="_blank"><img src="https://pbs.twimg.com/profile_images/3513354941/24aaffa670e634a7da9a087bfa83abe6_400x400.png" class="img-responsive" alt="logo facebook"/></a></div>
-      			<div class="col-xs-2 col-md-2"><a href="https://www.linkedin.com/in/juliealary" target="_blank"><img src="https://pbs.twimg.com/profile_images/614583061448036352/CBpFkPaz.png" class="img-responsive" alt="logo linkedin"/></a></div>
+      			<div class="col-xs-2 col-md-2"><a href="https://twitter.com/julie_alary"target="_blank"><img src="https://pbs.twimg.com/profile_images/666407537084796928/YBGgi9BO.png" class="img-responsive center-block" alt="logo twitter"/></a></div>
+      			<div class="col-xs-2 col-md-2"><a href="https://www.facebook.com/julie.alary1" target="_blank"><img src="https://pbs.twimg.com/profile_images/3513354941/24aaffa670e634a7da9a087bfa83abe6_400x400.png" class="img-responsive center-block" alt="logo facebook"/></a></div>
+      			<div class="col-xs-2 col-md-2"><a href="https://www.linkedin.com/in/juliealary" target="_blank"><img src="https://pbs.twimg.com/profile_images/614583061448036352/CBpFkPaz.png" class="img-responsive center-block" alt="logo linkedin"/></a></div>
 
-      			<div class="col-xs-6 col-md-6">
+      			<!--<div class="col-xs-6 col-md-6">
         			<form>
           				<div class="form-group">
             				<label for="pseudo">Pseudo</label>
@@ -100,17 +104,15 @@
             				<input type="textarea" class="form-control" id="comment" placeholder="Your message">
           				</div>
         			</form>
-      			</div>
-
-      			<div class="row">
-      				<div class="col-xs-2 col-md-2"><a href="mailto:julie.alary@gmail.com" target="_blank"><img src="https://pbs.twimg.com/profile_images/540202282982199297/Cerqh45i_400x400.png" class="img-responsive" alt="Responsive image"/></a></div>
-      				<div class="col-xs-2 col-md-2"><a href="https://github.com/JulieAlary" target="_blank"><img src="https://pbs.twimg.com/profile_images/616309728688238592/pBeeJQDQ.png" class="img-responsive" alt="Responsive image" /></a></div>
-       				<div class="col-xs-2 col-md-2"><a href="https://www.freecodecamp.com/juliealary" target="_blank"><img src="https://pbs.twimg.com/profile_images/692531829287567360/ytP7U362.png" class="img-responsive" alt="Responsive image" /></a></div>
-      			</div>
+      			</div>-->
+      	
+      			<div class="col-xs-2 col-md-2"><a href="https://github.com/JulieAlary" target="_blank"><img src="https://pbs.twimg.com/profile_images/616309728688238592/pBeeJQDQ.png" class="img-responsive center-block" alt="logo github" /></a></div>
+       			<div class="col-xs-2 col-md-2"><a href="https://www.freecodecamp.com/juliealary" target="_blank"><img src="https://pbs.twimg.com/profile_images/692531829287567360/ytP7U362.png" class="img-responsive center-block" alt="Logo FreeCodeCamp" /></a></div>
+            <div class="col-xs-2 col-md-2"><a href="mailto:julie.alary@gmail.com" target="_blank"><img src="https://pbs.twimg.com/profile_images/540202282982199297/Cerqh45i_400x400.png" class="img-responsive center-block" alt="logo gmail"/></a></div>
+      		</div>
 		</section>
 	
 		<footer role="contentinfo"><p>&copy Julie Alary</p></footer>
-<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>	
+
 	</body>
 </html>
