--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 		<link rel="stylesheet" href="asset/font-awesome/css/font-awesome.min.css">
 		<link href="css/style.css" rel="stylesheet" media="screen">
 
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="bootstrap/js/custom.js"></script>
+    
 
 		<title>"Julie Alary Personal One Page Site"</title>
 		<!--[if lt IE 9]>
@@ -91,21 +90,7 @@
     		<div class="row">
       			<div class="col-xs-2 col-md-2"><a href="https://twitter.com/julie_alary"target="_blank"><img src="https://pbs.twimg.com/profile_images/666407537084796928/YBGgi9BO.png" class="img-responsive center-block" alt="logo twitter"/></a></div>
       			<div class="col-xs-2 col-md-2"><a href="https://www.facebook.com/julie.alary1" target="_blank"><img src="https://pbs.twimg.com/profile_images/3513354941/24aaffa670e634a7da9a087bfa83abe6_400x400.png" class="img-responsive center-block" alt="logo facebook"/></a></div>
-      			<div class="col-xs-2 col-md-2"><a href="https://www.linkedin.com/in/juliealary" target="_blank"><img src="https://pbs.twimg.com/profile_images/614583061448036352/CBpFkPaz.png" class="img-responsive center-block" alt="logo linkedin"/></a></div>
-
-      			<!--<div class="col-xs-6 col-md-6">
-        			<form>
-          				<div class="form-group">
-            				<label for="pseudo">Pseudo</label>
-            				<input type="text" class="form-control" id="pseudo" placeholder="Your pseudo">
-          				</div>
-          				<div class="form-group">
-            				<label for="comment">Message</label>
-            				<input type="textarea" class="form-control" id="comment" placeholder="Your message">
-          				</div>
-        			</form>
-      			</div>-->
-      	
+      			<div class="col-xs-2 col-md-2"><a href="https://www.linkedin.com/in/juliealary" target="_blank"><img src="https://pbs.twimg.com/profile_images/614583061448036352/CBpFkPaz.png" class="img-responsive center-block" alt="logo linkedin"/></a></div>  	
       			<div class="col-xs-2 col-md-2"><a href="https://github.com/JulieAlary" target="_blank"><img src="https://pbs.twimg.com/profile_images/616309728688238592/pBeeJQDQ.png" class="img-responsive center-block" alt="logo github" /></a></div>
        			<div class="col-xs-2 col-md-2"><a href="https://www.freecodecamp.com/juliealary" target="_blank"><img src="https://pbs.twimg.com/profile_images/692531829287567360/ytP7U362.png" class="img-responsive center-block" alt="Logo FreeCodeCamp" /></a></div>
             <div class="col-xs-2 col-md-2"><a href="mailto:julie.alary@gmail.com" target="_blank"><img src="https://pbs.twimg.com/profile_images/540202282982199297/Cerqh45i_400x400.png" class="img-responsive center-block" alt="logo gmail"/></a></div>
@@ -113,6 +98,41 @@
 		</section>
 	
 		<footer role="contentinfo"><p>&copy Julie Alary</p></footer>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        $('a[href^="#jumbotron"]').click(function(){
+          var the_id = $(this).attr("href");
+          $('html, body').animate({
+          scrollTop:$(the_id).offset().top
+          }, 'slow');
+          return false;
+      });
+
+        $('a[href^="#portfolio"]').click(function(){
+          var the_id = $(this).attr("href");
+          $('html, body').animate({
+          scrollTop:$(the_id).offset().top
+          }, 'slow');
+          return false;
+      });
+
+        $('a[href^="#skills"]').click(function(){
+          var the_id = $(this).attr("href");
+          $('html, body').animate({
+          scrollTop:$(the_id).offset().top
+          }, 'slow');
+          return false;
+      });
+
+         $('a[href^="#contact"]').click(function(){
+          var the_id = $(this).attr("href");
+          $('html, body').animate({
+          scrollTop:$(the_id).offset().top
+          }, 'slow');
+          return false;
+      });
+    </script>
 
 	</body>
 </html>
