mise a jour font awesome &  contact

--- a/index.html
+++ b/index.html
@@ -43,21 +43,21 @@
 		<section role="main" id="portfolio"class="container-fluid">
   			<div class="row">
     			<div class="col-xs-6">
-      				<a href="https://codepen.io/Julie31/full/rezxGd/" target "_blank"><img src="http://img15.hostingpics.net/pics/216476santigold.jpg" class="img-responsive center-block" alt="Minitature du tribute sur Santigold"></a>
+      				<a href="https://codepen.io/Julie31/full/rezxGd/" target "_blank"><img src="http://img15.hostingpics.net/pics/216476santigold.jpg" class="img-responsive center-block img-rounded" alt="Minitature du tribute sur Santigold"></a>
       				<h4> A little tribute to Santigold (for FreeCodeCamp)</h4>
     			</div>
     			<div class="col-xs-6">
-      				<a href="#" target="_blank"><img src="http://img15.hostingpics.net/pics/746748firstsite.jpg" class="img-responsive center-block" alt="Miniature mon site heroku"></a>
+      				<a href="#" target="_blank"><img src="http://img15.hostingpics.net/pics/746748firstsite.jpg" class="img-responsive center-block img-rounded" alt="Miniature mon site heroku"></a>
       				<h4> My First Site (in always construction/reconstruction...<br/>hosted for the moment on heroku)</h4></div>
   				</div>
   			</div>
   			<div class="row">
     			<div class="col-xs-6">
-      				<a href="http://codepen.io/Julie31/full/yOzyaV/" target="_blank"><img src="http://img15.hostingpics.net/pics/868230randomquote.jpg" class="img-responsive center-block" alt="miniature exercice random quote santigol" /></a>
+      				<a href="http://codepen.io/Julie31/full/yOzyaV/" target="_blank"><img src="http://img15.hostingpics.net/pics/868230randomquote.jpg" class="img-responsive center-block img-rounded" alt="miniature exercice random quote santigol" /></a>
       				<h4>A random quote about Santigold's Lyrics (FreeCodeCamp)</h4>
     			</div>
     			<div class="col-xs-6">
-    				<img src="http://legrattoir.com/IMG/breveon4.png" class="img-responsive center-block" alt="Miniature bientot nouvelle présentation" />
+    				<img src="http://legrattoir.com/IMG/breveon4.png" class="img-responsive center-block img-rounded" alt="Miniature bientot nouvelle présentation" />
     			</div>
   			</div>
 		</section>
@@ -88,13 +88,15 @@
       			<h2>[Contact me] [Follow me] [fork me] [...]</h2>
     		</div>
     		<div class="row">
-      			<div class="col-xs-2 col-md-2"><a href="https://twitter.com/julie_alary"target="_blank"><img src="https://pbs.twimg.com/profile_images/666407537084796928/YBGgi9BO.png" class="img-responsive center-block" alt="logo twitter"/></a></div>
-      			<div class="col-xs-2 col-md-2"><a href="https://www.facebook.com/julie.alary1" target="_blank"><img src="https://pbs.twimg.com/profile_images/3513354941/24aaffa670e634a7da9a087bfa83abe6_400x400.png" class="img-responsive center-block" alt="logo facebook"/></a></div>
-      			<div class="col-xs-2 col-md-2"><a href="https://www.linkedin.com/in/juliealary" target="_blank"><img src="https://pbs.twimg.com/profile_images/614583061448036352/CBpFkPaz.png" class="img-responsive center-block" alt="logo linkedin"/></a></div>  	
-      			<div class="col-xs-2 col-md-2"><a href="https://github.com/JulieAlary" target="_blank"><img src="https://pbs.twimg.com/profile_images/616309728688238592/pBeeJQDQ.png" class="img-responsive center-block" alt="logo github" /></a></div>
-       			<div class="col-xs-2 col-md-2"><a href="https://www.freecodecamp.com/juliealary" target="_blank"><img src="https://pbs.twimg.com/profile_images/692531829287567360/ytP7U362.png" class="img-responsive center-block" alt="Logo FreeCodeCamp" /></a></div>
-            <div class="col-xs-2 col-md-2"><a href="mailto:julie.alary@gmail.com" target="_blank"><img src="https://pbs.twimg.com/profile_images/540202282982199297/Cerqh45i_400x400.png" class="img-responsive center-block" alt="logo gmail"/></a></div>
-      		</div>
+      			<div class="col-xs-2 col-md-4"><a href="https://twitter.com/julie_alary"target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></div>
+      			<div class="col-xs-2 col-md-4"><a href="https://www.facebook.com/julie.alary1" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></div>
+            <div class="col-xs-2 col-md-4"><a href="https://www.linkedin.com/in/juliealary?trk=nav_responsive_tab_profile_pic"target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></div>
+        </div>
+        <div class="row">
+      			<div class="col-xs-2 col-md-4"><a href="https://github.com/JulieAlary" target="_blank"><i class="fa fa-github-alt" aria-hidden="true"></i></a></div>
+       			<div class="col-xs-2 col-md-4"><a href="http://codepen.io/Julie31/" target="_blank"><i class="fa fa-codepen" aria-hidden="true"></i></a></div>
+            <div class="col-xs-2 col-md-4"><a href="mailto:julie.alary@gmail.com" target="_blank"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></div>
+      	</div>
 		</section>
 	
 		<footer role="contentinfo"><p>&copy Julie Alary</p></footer>
