--- a/index.html
+++ b/index.html
@@ -42,21 +42,21 @@
     
     <section role="main" id="portfolio"class="container-fluid">
         <div class="row">
-          <div class="col-xs-6">
+          <div class="col-xs-12 col-md-6">
               <a href="https://codepen.io/Julie31/full/rezxGd/" target "_blank"><img src="asset/img/santigold.jpg" class="img-responsive center-block img-rounded" alt="Minitature du tribute sur Santigold"></a>
               <h4> A little tribute to Santigold (for FreeCodeCamp)</h4>
           </div>
-          <div class="col-xs-6">
+          <div class="col-xs-12 col-md-6">
               <a href="#" target="_blank"><img src="asset/img/JulieFirstSite.png" class="img-responsive center-block img-rounded" alt="Miniature mon site heroku"></a>
               <h4> My First Site (in always construction/reconstruction...<br/>hosted for the moment on heroku)</h4></div>
           </div>
         </div>
         <div class="row">
-          <div class="col-xs-6">
+          <div class="col-xs-12 col-md-6">
               <a href="http://codepen.io/Julie31/full/yOzyaV/" target="_blank"><img src="asset/img/random.jpg" class="img-responsive center-block img-rounded" alt="miniature exercice random quote santigol" /></a>
               <h4>A random quote about Santigold's Lyrics (FreeCodeCamp)</h4>
           </div>
-          <div class="col-xs-6">
+          <div class="col-xs-12 col-md-6">
             <img src="asset/img/coming_soon.jpg" class="img-responsive center-block img-rounded" alt="Miniature bientot nouvelle présentation" />
           </div>
         </div>
@@ -70,16 +70,16 @@
           <p><strong>My skills :</p>
         </div>
         <div class="row">
-          <div class="col-xs-3 col-md-3"><img src="http://img15.hostingpics.net/pics/764804html5couleur.png" class="img-responsive center-block" alt="logo html5"/></div>
-          <div class="col-xs-3 col-md-3"><img src="http://img15.hostingpics.net/pics/434266css3couleur.png" class="img-responsive center-block" alt="logo css3"/></div>
-          <div class="col-xs-3 col-md-3"><img src="http://img15.hostingpics.net/pics/351739JScouleur.png" class="img-responsive center-block" alt="logo javascript"/></div>
-          <div class="col-xs-3 col-md-3"><img src="http://img15.hostingpics.net/pics/196240phpcouleur.png"class="img-responsive center-block" alt="logo php"/></div>
+          <div class="col-xs-3 col-md-3"><img src="asset/img/html5.png" class="img-responsive center-block" alt="logo html5"/></div>
+          <div class="col-xs-3 col-md-3"><img src="asset/img/css3.png" class="img-responsive center-block" alt="logo css3"/></div>
+          <div class="col-xs-3 col-md-3"><img src="asset/img/js.png" class="img-responsive center-block" alt="logo javascript"/></div>
+          <div class="col-xs-3 col-md-3"><img src="asset/img/php.png"class="img-responsive center-block" alt="logo php"/></div>
         </div>
       <div class="row">
-          <div class="col-xs-3 col-md-3"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ea/Boostrap_logo.svg/2000px-Boostrap_logo.svg.png" class="img-responsive center-block" alt="logo bootstrap"/></div>
-          <div class="col-xs-3 col-md-3"><img src="http://rubyonrails.org/images/rails-logo.svg" class="img-responsive rails center-block" alt="Logo Ruby on rails" /></div>
-          <div class="col-xs-3 col-md-3"><img src="http://img08.deviantart.net/7f09/i/2013/008/1/9/ruby_by_sakatagintoki117-d5qwq2l.png" class="img-responsive center-block" alt="logo rails"  /></div>
-          <div class="col-xs-3 col-md-3"><img src="https://git-scm.com/images/logos/downloads/Git-Icon-1788C.png" class="img-responsive center-block" alt="logo git"  /></div>
+          <div class="col-xs-3 col-md-3"><img src="asset/img/boostrap.png" class="img-responsive center-block boostrap" alt="logo boostrap"/></div>
+          <div class="col-xs-3 col-md-3"><img src="asset/img/rails.svg" class="img-responsive center-block rails" alt="Logo Ruby on rails" /></div>
+          <div class="col-xs-3 col-md-3"><img src="asset/img/ruby.png" class="img-responsive center-block" alt="logo ruby"  /></div>
+          <div class="col-xs-3 col-md-3"><img src="asset/img/Git.png" class="img-responsive center-block" alt="logo git"  /></div>
         </div>
     </section>
 
