--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
           <h4>I'm learning code since January 2016</h4><br/>
           <p><strong>My skills :</p>
         </div>
+
+        <div class="row">
+          <div class=""><a class="btn btn-default" href="#" role="button">Link</a></div>
+           <div class=""><a class="btn btn-default" href="#" role="button">Link</a></div>
+        </div>
+
         <div class="row">
           <div class="col-xs-3 col-md-3"><img src="asset/img/html5.png" class="img-responsive center-block" alt="logo html5"/></div>
           <div class="col-xs-3 col-md-3"><img src="asset/img/css3.png" class="img-responsive center-block" alt="logo css3"/></div>
