--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
         </div>
 
         <div class="row">
-          <div class="col-md-6"><a class="btn btn-default center-block" href="#" role="button">Link</a></div>
-           <div class="col-md-6"><a class="btn btn-default center-block" href="#" role="button">Link</a></div>
+          <div class="col-md-6"><a class="btn btn-default" href="#" role="button">Link</a></div>
+           <div class="col-md-6"><a class="btn btn-default" href="#" role="button">Link</a></div>
         </div>
 
         <div class="row">
