--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
 
         <div class="row">
-          <div class="col-md-3 col-md-offset-3"><a class="btn btn-default" href="#" role="button">Link</a></div>
+          <div class="col-md-3 col-md-offset-3"><a class="btn btn-default btn-left" href="#" role="button">Link</a></div>
            <div class="col-md-3"><a class="btn btn-default" href="#" role="button">Link</a></div>
         </div>
 
