--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
         </div>
 
         <div class="row">
-          <div class="col-md-6 text-center"><a class="btn btn-default btn-lg" href="#" role="button">Curriculum Vitae</a></div>
-           <div class="col-md-6 text-center"><a class="btn btn-default btn-lg" href="#" role="button">School's Program</a></div>
+          <div class="col-md-6 text-center"><a class="btn btn-default btn-lg" href="cv.htmlS" role="button">Curriculum Vitae</a></div>
+           <div class="col-md-6 text-center"><a class="btn btn-default btn-lg" href="formation.html" role="button">School's Program</a></div>
         </div>
 
         <div class="row">
