--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
 
         <div class="row">
-          <div class="col-md-6 text-center"><a class="btn btn-default btn-lg" href="cv.htmlS" role="button">Curriculum Vitae</a></div>
+          <div class="col-md-6 text-center"><a class="btn btn-default btn-lg" href="cv.html" role="button">Curriculum Vitae</a></div>
            <div class="col-md-6 text-center"><a class="btn btn-default btn-lg" href="formation.html" role="button">School's Program</a></div>
         </div>
 
