--- a/formation.html
+++ b/formation.html
@@ -24,6 +24,13 @@
   </head>
 
 <body>
+
+    <header class="jumbotron" role="main">
+      <h1>Contenus de la formation WebDevelopper</h1>
+    </header>
+
+
+
 	 <footer role="contentinfo"><p>&copy Julie Alary</p></footer>
 </body>
 
