--- a/formation.html
+++ b/formation.html
@@ -29,6 +29,14 @@
       <h1>Contenus de la formation WebDevelopper</h1>
     </header>
 
+    <section role="main" class="container-fluid">
+      <article role="article" class="row">
+
+        <div class="col-md-6 .col-md-offset-3 lesson"></div>
+       
+      </article>
+    </section>
+
 
 
 	 <footer role="contentinfo"><p>&copy Julie Alary</p></footer>
