--- a/formation.html
+++ b/formation.html
@@ -32,8 +32,23 @@
     <section role="main" class="container-fluid">
       <article role="article" class="row">
 
-        <div class="col-md-6 .col-md-offset-3 lesson"></div>
-       
+        <div class="col-md-6 .col-md-offset-3 lesson">
+          <h2>HTML 5 & CSS 3</h2>
+          <ul>
+            <li>Structure HTML 5</li>
+            <li>Mise en forme CSS - Ergonomie - UI-UX
+              <ul>
+                <li>Positionnement : float, inline-block, flexbox</li>
+                <li>Compatibilité entre les navigateurs</li>
+                <li>Les transformations & les transitions</li>
+                <li>Les animations</li>
+                <li>Les animations</li>
+                <li>Le responsive avec Media Queries</li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+        
       </article>
     </section>
 
