--- a/formation.html
+++ b/formation.html
@@ -32,7 +32,7 @@
     <section role="main" class="container-fluid">
       <article role="article" class="row">
 
-        <div class="col-md-6 .col-md-offset-3 lesson">
+        <div class="col-md-6 col-md-offset-3 lesson">
           <h2>HTML 5 & CSS 3</h2>
           <ul>
             <li>Structure HTML 5</li>
