--- a/formation.html
+++ b/formation.html
@@ -32,7 +32,8 @@
     <section role="main" class="container-fluid">
       <article role="article" class="row">
 
-        <div class="col-md-6 col-md-offset-3 center-block lesson">
+        <div class="col-md-6 col-md-offset-3 lesson">
+          <div class="lesson_one">
           <h2>HTML 5 & CSS 3</h2>
           <ul>
             <li>Structure HTML 5</li>
@@ -47,6 +48,7 @@
               </ul>
             </li>
           </ul>
+        </div>
         </div>
         
       </article>
