--- a/formation.html
+++ b/formation.html
@@ -48,6 +48,107 @@
                         </li>
                     </ul>
             </div>
+
+            <div class="lesson_one">
+                <h2>ALGORITHMES</h2>
+                    <ul>
+                        <li>Les variables</li>
+                        <li>Les structures</li>
+                        <li>Les fonctions et procédures</li>
+                        <li>La notion de complexité</li>
+                        <li>Les tableaux</li>            
+                    </ul>
+            </div>
+
+            <div class="lesson_one">
+                <h2>PHP</h2>
+                    <ul>
+                        <li>Le partitionnement et l'inclusion</li>
+                        <li>Les variables</li>
+                        <li>Les structures</li>
+                        <li>Les fonctions et procédures</li>
+                        <li>Les tableaux</li>
+                        <li>Le passage de données
+                          <ul>
+                            <li>Méthode GET</li>
+                            <li>Méthode POST</li>
+                            <li>Les sessions</li>
+                          </ul>
+                        </li>          
+                    </ul>
+            </div>
+
+            <div class="lesson_one">
+                <h2>Bases de données</h2>
+                    <ul>
+                        <li>PHPMyAdmin</li>
+                        <li>Le langage SQL</li>
+                        <li>L'extention PDO</li>        
+                    </ul>
+            </div>
+
+            <div class="lesson_one">
+                <h2>Programmation Orientée Objet</h2>
+                    <ul>
+                        <li>L'objet, les classes & les instances</li>
+                        <li>L'encapsulation</li>
+                        <li>Les accesseurs & et les mutateurs></li>
+                        <li>Les constructeur & le destructeur</li> 
+                        <li>Les constantes de classe></li> 
+                        <li>L'héritage</li> 
+                        <li>Le tipage et le polymorphisme</li> 
+                        <li>L'abstraction et la surcharge</li> 
+                        <li>Les interfaces et les exceptions</li>
+                        <li>Le trait et les closures</li>       
+                    </ul>
+            </div>
+
+            <div class="lesson_one">
+                <h2>Gestion de projet</h2>
+                    <ul>
+                        <li>La modélisation objet UML</li>
+                        <li>La méthode MERISE</li>
+                        <li>La méthoded AGILE
+                            <ul>
+                                <li>La méthode SCRUM</li>
+                            </ul>   
+                        </li>          
+                    </ul>
+            </div>
+
+            <div class="lesson_one">
+                <h2>Javascript</h2>
+                    <ul>
+                        <li>La syntaxe de base</li>
+                        <li>Le DOM</li>
+                        <li>Le gestionnaire d'événements</li>  
+                        <li>L'objet XMLHttpRequest</li>
+                        <li>jQuery</li>
+                        <li>Ajax</li>
+                    </ul>
+            </div>
+
+            <div class="lesson_one">
+                <h2>Expressions régulières</h2>
+                    <ul>
+                        <li>Application au PHP</li>
+                        <li>La structure</li>
+                        <li>Les métacaractères</li>  
+                        <li>Les classes abrégées</li>
+                        <li>La capture et le remplacement</li>
+                    </ul>
+            </div>
+
+            <div class="lesson_one">
+                <h2>Mise en ligne & Webmarketing</h2>
+                    <ul>
+                        <li>Notion de réseau & protocoles</li>
+                        <li>Hébergement</li>
+                        <li>Référencement naturel et Webmarketing</li>  
+                        <li>Le développement durable</li>
+                      
+                    </ul>
+            </div>
         </div>    
       </article>
     </section>
