--- a/test.html
+++ b/test.html
@@ -69,7 +69,13 @@
 
 </div>
 </body>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js" type="text/javascript"></script>
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="css/bootstrap/js/bootstrap.min.js"></script>
+<script>
+  $('.carousel').carousel({
+    interval: 3000
+  })
+</script>
 
    <footer role="contentinfo"><p>&copy Julie Alary</p></footer>
 </body>
