--- a/test.html
+++ b/test.html
@@ -38,25 +38,131 @@
                 <div class="item active">
                     <div class="carousel-content">
                         <div>
-                            <p>Sapiente, ducimus, voluptas, mollitia voluptatibus nemo explicabo sit blanditiis laborum dolore illum fuga veniam quae expedita libero accusamus quas harum ex numquam necessitatibus provident deleniti tenetur iusto officiis recusandae corporis culpa quaerat?</p>
+                            <h2>HTML 5 & CSS 3</h2>
+                                <ul>
+                                    <li>Structure HTML 5</li>
+                                    <li>Mise en forme CSS - Ergonomie - UI-UX
+                                        <ul>
+                                            <li>Positionnement : float, inline-block, flexbox</li>
+                                            <li>Compatibilité entre les navigateurs</li>
+                                            <li>Les transformations & les transitions</li>
+                                            <li>Les animations</li>
+                                            <li>Le responsive avec Media Queries</li>
+                                        </ul>
+                                    </li>
+                                </ul>
                         </div>
                     </div>
                 </div>
                 <div class="item">
                     <div class="carousel-content">
                         <div>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, sint fuga temporibus nam saepe delectus expedita vitae magnam necessitatibus dolores tempore consequatur dicta cumque repellendus eligendi ducimus placeat! </p>
+                             <h2>ALGORITHMES</h2>
+                                <ul>
+                                    <li>Les variables</li>
+                                    <li>Les structures</li>
+                                    <li>Les fonctions et procédures</li>
+                                    <li>La notion de complexité</li>
+                                    <li>Les tableaux</li>            
+                                </ul>
                         </div>
                     </div>
                 </div>
                 <div class="item">
                     <div class="carousel-content">
                         <div>                          
-                            <p>Sapiente, ducimus, voluptas, mollitia voluptatibus nemo explicabo sit blanditiis laborum dolore illum fuga veniam quae expedita libero accusamus quas harum ex numquam necessitatibus provident deleniti tenetur iusto officiis recusandae corporis culpa quaerat?</p>
+                            <h2>PHP</h2>
+                                <ul>
+                                    <li>Le partitionnement et l'inclusion</li>
+                                    <li>Les variables</li>
+                                    <li>Les structures</li>
+                                    <li>Les fonctions et procédures</li>
+                                    <li>Les tableaux</li>
+                                    <li>Le passage de données
+                                        <ul>
+                                            <li>Méthode GET</li>
+                                            <li>Méthode POST</li>
+                                            <li>Les sessions</li>
+                                        </ul>
+                                    </li>          
+                                </ul>
                         </div>
                     </div>
                 </div>
-                
+                <div class="item">
+                    <div class="carousel-content">
+                        <div>                          
+                            <h2>Bases de données</h2>
+                                <ul>
+                                    <li>PHPMyAdmin</li>
+                                    <li>Le langage SQL</li>
+                                    <li>L'extention PDO</li>        
+                                </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="carousel-content">
+                        <div>                          
+                            <h2>Programmation Orientée Objet</h2>
+                                <ul>
+                                    <li>L'objet, les classes & les instances</li>
+                                    <li>L'encapsulation</li>
+                                    <li>Les accesseurs & et les mutateurs</li>
+                                    <li>Les constructeur & le destructeur</li> 
+                                    <li>Les constantes de classe</li> 
+                                    <li>L'héritage</li> 
+                                    <li>Le tipage et le polymorphisme</li> 
+                                    <li>L'abstraction et la surcharge</li> 
+                                    <li>Les interfaces et les exceptions</li>
+                                    <li>Le trait et les closures</li>       
+                                </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="carousel-content">
+                        <div>                          
+                            <h2>Gestion de projet</h2>
+                                <ul>
+                                    <li>La modélisation objet UML</li>
+                                    <li>La méthode MERISE</li>
+                                    <li>La méthoded AGILE
+                                        <ul>
+                                            <li>La méthode SCRUM</li>
+                                        </ul>   
+                                    </li>          
+                                </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="carousel-content">
+                        <div>                          
+                            <h2>Expressions régulières</h2>
+                                <ul>
+                                    <li>Application au PHP</li>
+                                    <li>La structure</li>
+                                    <li>Les métacaractères</li>  
+                                    <li>Les classes abrégées</li>
+                                    <li>La capture et le remplacement</li>
+                                </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="carousel-content">
+                        <div>                          
+                            <h2>Mise en ligne & Webmarketing</h2>
+                                <ul>
+                                    <li>Notion de réseau & protocoles</li>
+                                    <li>Hébergement</li>
+                                    <li>Référencement naturel et Webmarketing</li>  
+                                    <li>Le développement durable</li>
+                                </ul>
+                        </div>
+                    </div>
+                </div>          
             </div>
         </div>
     </div>
