--- a/formation.html
+++ b/formation.html
@@ -7,7 +7,7 @@
     <link href="css/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link rel="stylesheet" href="asset/font-awesome/css/font-awesome.min.css">
     <link href="css/style_formation.css" rel="stylesheet" media="screen">
-    	<title>"Julie Alary Personal One Page Site || Formation"</title>
+      <title>"Julie Alary Personal One Page Site || Formation"</title>
     <!--[if lt IE 9]>
       <link rel="stylesheet" type="text/css"href="ie-lt9.css">
       <script type="text/javascript" src="js/html5shiv.js"</script>
@@ -29,132 +29,161 @@
         <h1>Contenus de la formation WebDevelopper</h1>
     </header>
 
-    <section role="main" class="container-fluid">
-      <article role="article" class="row">
-
-        <div class="col-md-6 col-md-offset-3 lesson">
-            <div class="lesson_one">
-                <h2>HTML 5 & CSS 3</h2>
-                    <ul>
-                        <li>Structure HTML 5</li>
-                        <li>Mise en forme CSS - Ergonomie - UI-UX
-                            <ul>
-                                <li>Positionnement : float, inline-block, flexbox</li>
-                                <li>Compatibilité entre les navigateurs</li>
-                                <li>Les transformations & les transitions</li>
-                                <li>Les animations</li>
-                                <li>Le responsive avec Media Queries</li>
-                            </ul>
-                        </li>
-                    </ul>
+   <body>
+<div id="text-carousel" class="carousel slide" data-ride="carousel">
+    <!-- Wrapper for slides -->
+    <div class="row">
+        <div class="col-xs-offset-3 col-xs-6">
+            <div class="carousel-inner">
+                <div class="item active">
+                    <div class="carousel-content">
+                        <div>
+                            <h2>HTML 5 & CSS 3</h2>
+                                <ul>
+                                    <li>Structure HTML 5</li>
+                                    <li>Mise en forme CSS - Ergonomie - UI-UX
+                                        <ul>
+                                            <li>Positionnement : float, inline-block, flexbox</li>
+                                            <li>Compatibilité entre les navigateurs</li>
+                                            <li>Les transformations & les transitions</li>
+                                            <li>Les animations</li>
+                                            <li>Le responsive avec Media Queries</li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="carousel-content">
+                        <div>
+                             <h2>ALGORITHMES</h2>
+                                <ul>
+                                    <li>Les variables</li>
+                                    <li>Les structures</li>
+                                    <li>Les fonctions et procédures</li>
+                                    <li>La notion de complexité</li>
+                                    <li>Les tableaux</li>            
+                                </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="carousel-content">
+                        <div>                          
+                            <h2>PHP</h2>
+                                <ul>
+                                    <li>Le partitionnement et l'inclusion</li>
+                                    <li>Les variables</li>
+                                    <li>Les structures</li>
+                                    <li>Les fonctions et procédures</li>
+                                    <li>Les tableaux</li>
+                                    <li>Le passage de données
+                                        <ul>
+                                            <li>Méthode GET</li>
+                                            <li>Méthode POST</li>
+                                            <li>Les sessions</li>
+                                        </ul>
+                                    </li>          
+                                </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="carousel-content">
+                        <div>                          
+                            <h2>Bases de données</h2>
+                                <ul>
+                                    <li>PHPMyAdmin</li>
+                                    <li>Le langage SQL</li>
+                                    <li>L'extention PDO</li>        
+                                </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="carousel-content">
+                        <div>                          
+                            <h2>Programmation Orientée Objet</h2>
+                                <ul>
+                                    <li>L'objet, les classes & les instances</li>
+                                    <li>L'encapsulation</li>
+                                    <li>Les accesseurs & et les mutateurs</li>
+                                    <li>Les constructeur & le destructeur</li> 
+                                    <li>Les constantes de classe</li> 
+                                    <li>L'héritage</li> 
+                                    <li>Le tipage et le polymorphisme</li> 
+                                    <li>L'abstraction et la surcharge</li> 
+                                    <li>Les interfaces et les exceptions</li>
+                                    <li>Le trait et les closures</li>       
+                                </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="carousel-content">
+                        <div>                          
+                            <h2>Gestion de projet</h2>
+                                <ul>
+                                    <li>La modélisation objet UML</li>
+                                    <li>La méthode MERISE</li>
+                                    <li>La méthoded AGILE
+                                        <ul>
+                                            <li>La méthode SCRUM</li>
+                                        </ul>   
+                                    </li>          
+                                </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="carousel-content">
+                        <div>                          
+                            <h2>Expressions régulières</h2>
+                                <ul>
+                                    <li>Application au PHP</li>
+                                    <li>La structure</li>
+                                    <li>Les métacaractères</li>  
+                                    <li>Les classes abrégées</li>
+                                    <li>La capture et le remplacement</li>
+                                </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="carousel-content">
+                        <div>                          
+                            <h2>Mise en ligne & Webmarketing</h2>
+                                <ul>
+                                    <li>Notion de réseau & protocoles</li>
+                                    <li>Hébergement</li>
+                                    <li>Référencement naturel et Webmarketing</li>  
+                                    <li>Le développement durable</li>
+                                </ul>
+                        </div>
+                    </div>
+                </div>          
             </div>
+        </div>
+    </div>
+    <!-- Controls --> <a class="left carousel-control" href="#text-carousel" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+ <a class="right carousel-control" href="#text-carousel" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
 
-            <div class="lesson_one">
-                <h2>ALGORITHMES</h2>
-                    <ul>
-                        <li>Les variables</li>
-                        <li>Les structures</li>
-                        <li>Les fonctions et procédures</li>
-                        <li>La notion de complexité</li>
-                        <li>Les tableaux</li>            
-                    </ul>
-            </div>
+</div>
+</body>
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="css/bootstrap/js/bootstrap.min.js"></script>
+<script>
+  $('.carousel').carousel({
+    interval: 3000
+  })
+</script>
 
-            <div class="lesson_one">
-                <h2>PHP</h2>
-                    <ul>
-                        <li>Le partitionnement et l'inclusion</li>
-                        <li>Les variables</li>
-                        <li>Les structures</li>
-                        <li>Les fonctions et procédures</li>
-                        <li>Les tableaux</li>
-                        <li>Le passage de données
-                          <ul>
-                            <li>Méthode GET</li>
-                            <li>Méthode POST</li>
-                            <li>Les sessions</li>
-                          </ul>
-                        </li>          
-                    </ul>
-            </div>
-
-            <div class="lesson_one">
-                <h2>Bases de données</h2>
-                    <ul>
-                        <li>PHPMyAdmin</li>
-                        <li>Le langage SQL</li>
-                        <li>L'extention PDO</li>        
-                    </ul>
-            </div>
-
-            <div class="lesson_one">
-                <h2>Programmation Orientée Objet</h2>
-                    <ul>
-                        <li>L'objet, les classes & les instances</li>
-                        <li>L'encapsulation</li>
-                        <li>Les accesseurs & et les mutateurs></li>
-                        <li>Les constructeur & le destructeur</li> 
-                        <li>Les constantes de classe></li> 
-                        <li>L'héritage</li> 
-                        <li>Le tipage et le polymorphisme</li> 
-                        <li>L'abstraction et la surcharge</li> 
-                        <li>Les interfaces et les exceptions</li>
-                        <li>Le trait et les closures</li>       
-                    </ul>
-            </div>
-
-            <div class="lesson_one">
-                <h2>Gestion de projet</h2>
-                    <ul>
-                        <li>La modélisation objet UML</li>
-                        <li>La méthode MERISE</li>
-                        <li>La méthoded AGILE
-                            <ul>
-                                <li>La méthode SCRUM</li>
-                            </ul>   
-                        </li>          
-                    </ul>
-            </div>
-
-            <div class="lesson_one">
-                <h2>Javascript</h2>
-                    <ul>
-                        <li>La syntaxe de base</li>
-                        <li>Le DOM</li>
-                        <li>Le gestionnaire d'événements</li>  
-                        <li>L'objet XMLHttpRequest</li>
-                        <li>jQuery</li>
-                        <li>Ajax</li>
-                    </ul>
-            </div>
-
-            <div class="lesson_one">
-                <h2>Expressions régulières</h2>
-                    <ul>
-                        <li>Application au PHP</li>
-                        <li>La structure</li>
-                        <li>Les métacaractères</li>  
-                        <li>Les classes abrégées</li>
-                        <li>La capture et le remplacement</li>
-                    </ul>
-            </div>
-
-            <div class="lesson_one">
-                <h2>Mise en ligne & Webmarketing</h2>
-                    <ul>
-                        <li>Notion de réseau & protocoles</li>
-                        <li>Hébergement</li>
-                        <li>Référencement naturel et Webmarketing</li>  
-                        <li>Le développement durable</li>
-                    </ul>
-            </div>
-        </div>    
-      </article>
-    </section>
-
-
-
-	 <footer role="contentinfo"><p>&copy Julie Alary</p></footer>
+   <footer role="contentinfo"><p>&copy Julie Alary</p></footer>
 </body>
 
 </html>
