formation_carousel_footer_ok

--- a/cv.html
+++ b/cv.html
@@ -24,7 +24,7 @@
   </head>
 
 <body>
-	 <footer role="contentinfo"><p>&copy Julie Alary</p></footer>
+	 <footer role="contentinfo"><p class="navbar-text navbar-fixed-bottom">&copy Julie Alary</p></footer>
 </body>
 
 </html>
