--- a/formation.html
+++ b/formation.html
@@ -183,7 +183,7 @@
   })
 </script>
 
-   <footer role="contentinfo"><p>&copy Julie Alary</p></footer>
+   <footer role="contentinfo"><p class="navbar-text navbar-fixed-bottom">&copy Julie Alary</p></footer>
 </body>
 
 </html>
