--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div>
     </section>
   
-    <footer role="contentinfo"><p>&copy Julie Alary</p></footer>
+     <footer role="contentinfo"><p class="navbar-text navbar-fixed-bottom">&copy Julie Alary</p></footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript">
