--- a/formation.html
+++ b/formation.html
@@ -172,8 +172,12 @@
  <a class="right carousel-control" href="#text-carousel" data-slide="next">
     <span class="glyphicon glyphicon-chevron-right"></span>
   </a>
-
 </div>
+
+    <div class="row">
+        <div class="col-md-4 col-md-offset-4 text-center"><a href="index.html"><i class="fa fa-arrow-left" aria-hidden="true"></i></a></div>
+    </div>
+
 </body>
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="css/bootstrap/js/bootstrap.min.js"></script>
