transition et animation link

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
   <body>
     <nav role="navigation" class="navbar navbar-default navbar-fixed-top">
         <div class="container">
-          <p class="navbar-text"><a href="#jumbotron">Home</a></p>
-          <p class="navbar-text"><a href="#portfolio">Portfolio</a></p>
-          <p class="navbar-text"><a href="#skills">About</a></p>
-          <p class="navbar-text"><a href="#contact">Contact</a></p>
+          <p class="navbar-text hvr-wobble-to-top-right"><a href="#jumbotron">Home</a></p>
+          <p class="navbar-text hvr-wobble-to-top-right"><a href="#portfolio">Portfolio</a></p>
+          <p class="navbar-text hvr-wobble-to-top-right"><a href="#skills">About</a></p>
+          <p class="navbar-text hvr-wobble-to-top-right"><a href="#contact">Contact</a></p>
         </div>
     </nav>
 
     <header role="main" id="jumbotron">
-      <h1 class="text-center"><strong>Julie Alary<br/><br/>Learning Front & Back-end <br/><br/>@ <a href="http://www.objectif3w.com">Objectif 3W</a></strong></h1>      
+      <h1 class="text-center"><strong>Julie Alary<br/><br/>Learning Front & Back-end <br/><br/>@ <a href="http://www.objectif3w.com" class="hvr-underline-from-left">Objectif 3W</a></strong></h1>      
     </header>
     
     <section role="main" id="portfolio"class="container-fluid">
