--- a/cv.html
+++ b/cv.html
@@ -24,6 +24,12 @@
   </head>
 
 <body>
+
+<div class="jumbotron">
+  <h1>WebDeveloppe[se] cherche stage</h1>
+  <img src="asset/img/julie.jpg"width="200" class="img-circle"alt="photo personnelle">
+</div>
+
 	 <footer role="contentinfo"><p class="navbar-text navbar-fixed-bottom">&copy Julie Alary</p></footer>
 </body>
 
