--- a/cv.html
+++ b/cv.html
@@ -79,7 +79,11 @@
   </article>
 </section>
 
-	 <footer role="contentinfo"><p class="navbar-text">&copy Julie Alary</p></footer>
+  <div class="row arrow_cv">
+        <div class="col-md-4 col-md-offset-4 text-center"><a href="index.html"><i class="fa fa-arrow-left" aria-hidden="true"></i></a></div>
+    </div>
+
+	 <footer role="contentinfo"><p class="navbar-text text-center">&copy Julie Alary</p></footer>
 </body>
 
 </html>
