--- a/cv.html
+++ b/cv.html
@@ -79,6 +79,9 @@
   </article>
 </section>
 
+  <div class="row">
+    <a href="CV_Julie_Alary_2016-2017.pdf">Télécharger le cv</a>
+  </div>
   <div class="row arrow_cv">
         <div class="col-md-4 col-md-offset-4 text-center"><a href="index.html"><i class="fa fa-arrow-left" aria-hidden="true"></i></a></div>
     </div>
