--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
         </div>
 
         <div class="row">
-          <div class="col-md-6 text-center"><a class="btn btn-default btn-lg" href="cv.html" role="button">Curriculum Vitae</a></div>
-           <div class="col-md-6 text-center"><a class="btn btn-default btn-lg" href="formation.html" role="button">School's Program</a></div>
+          <div class="col-xs-6 col-md-6 text-center"><a class="btn btn-default btn-lg" href="cv.html" role="button">Curriculum Vitae</a></div>
+           <div class="col-xs-6 col-md-6 text-center"><a class="btn btn-default btn-lg" href="formation.html" role="button">School's Program</a></div>
         </div>
 
         <div class="row">
@@ -96,7 +96,7 @@
             <div class="col-xs-4 col-md-4"><a href="https://www.facebook.com/julie.alary1" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></div>
             <div class="col-xs-4 col-md-4"><a href="https://www.linkedin.com/in/juliealary?trk=nav_responsive_tab_profile_pic"target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></div>
         </div>
-        <div class="row">
+        <div class="row second_row">
             <div class="col-xs-4 col-md-4"><a href="https://github.com/JulieAlary" target="_blank"><i class="fa fa-github-alt" aria-hidden="true"></i></a></div>
             <div class="col-xs-4 col-md-4"><a href="http://codepen.io/Julie31/" target="_blank"><i class="fa fa-codepen" aria-hidden="true"></i></a></div>
             <div class="col-xs-4 col-md-4"><a href="mailto:julie.alary@gmail.com" target="_blank"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></div>
