--- a/formation.html
+++ b/formation.html
@@ -175,7 +175,7 @@
 </div>
 
     <div class="row arrow_formation">
-        <div class="col-md-4 col-md-offset-4 text-center"><a href="index.html"><i class="fa fa-arrow-left" aria-hidden="true"></i></a></div>
+        <div class="col-md-4 col-md-offset-4 text-center"><a href="index.html"><i class="fa fa-arrow-left" aria-hidden="true"></i><i class="fa fa-home" aria-hidden="true"></i></a></div>
     </div>
 
 </body>
