--- a/cv.html
+++ b/cv.html
@@ -72,6 +72,7 @@
       <p>Voyage</p>
       <hr/>
     <h3>Informations Complémentaires</h3>
+      <p>32 ans</p>
       <p>Permis b</p>
       <p>Anglais et Espagnol - parlé et lu niveau intermédiaire</p>
       <p>Célibataire, sans enfants</p>
@@ -81,7 +82,7 @@
 
   <div class="col-md-6 col-md-offset-3 text-center"><a class="btn btn-default btn-lg" href="CV_Julie_Alary_2016-2017.pdf" role="button">Télécharger le cv</a></div>
   <div class="row arrow_cv">
-        <div class="col-md-4 col-md-offset-4 text-center"><a href="index.html"><i class="fa fa-arrow-left" aria-hidden="true"></i></a></div>
+        <div class="col-md-4 col-md-offset-4 text-center"><a href="index.html"><i class="fa fa-arrow-left" aria-hidden="true"></i><i class="fa fa-home" aria-hidden="true"></i></a></div>
     </div>
 
 	 <footer role="contentinfo"><p class="navbar-text text-center">&copy Julie Alary</p></footer>
