--- a/index.html
+++ b/index.html
@@ -36,36 +36,36 @@
   <body>
     <nav role="navigation" class="navbar navbar-default navbar-fixed-top">
         <div class="container">
-          <p class="navbar-text hvr-wobble-to-top-right"><a href="#jumbotron">Home</a></p>
+          <p class="navbar-text hvr-wobble-to-top-right"><a href="#jumbotron">Accueil</a></p>
           <p class="navbar-text hvr-wobble-to-top-right"><a href="#portfolio">Portfolio</a></p>
-          <p class="navbar-text hvr-wobble-to-top-right"><a href="#skills">About</a></p>
+          <p class="navbar-text hvr-wobble-to-top-right"><a href="#skills">Parcours</a></p>
           <p class="navbar-text hvr-wobble-to-top-right"><a href="#contact">Contact</a></p>
         </div>
     </nav>
 
     <header role="main" id="jumbotron">
-      <h1 class="text-center"><strong>Julie Alary<br/><br/>Learning Front & Back-end <br/><br/>@ <a href="http://www.objectif3w.com" class="hvr-underline-from-left">Objectif 3W</a></strong></h1>      
+      <h1 class="text-center"><strong>Julie Alary<br/><br/>En Formation Front & Back-end <br/><br/>@ <a href="http://www.objectif3w.com" class="hvr-underline-from-left">Objectif 3W</a></strong></h1>      
     </header>
     
     <section role="main" id="portfolio"class="container-fluid">
         <div class="row">
-          <div class="col-xs-12 col-md-6">
-              <a href="https://codepen.io/Julie31/full/rezxGd/" target "_blank"><img src="asset/img/santigold.jpg" class="img-responsive center-block img-rounded" alt="Minitature du tribute sur Santigold"></a>
-              <h4> A little tribute to Santigold (for FreeCodeCamp)</h4>
-          </div>
-          <div class="col-xs-12 col-md-6">
-              <a href="#" target="_blank"><img src="asset/img/JulieFirstSite.png" class="img-responsive center-block img-rounded" alt="Miniature mon site heroku"></a>
-              <h4> My First Site (in always construction/reconstruction...<br/>hosted for the moment on heroku)</h4></div>
-          </div>
+            <div class="col-xs-12 col-md-6">
+                <a href="https://codepen.io/Julie31/full/rezxGd/" target "_blank"><img src="asset/img/santigold.jpg" class="img-responsive center-block img-rounded" alt="Minitature du tribute sur Santigold"></a>
+                <h4> One page avec Bootstrap (exercice FreeCodeCamp)</h4>
+            </div>
+            <div class="col-xs-12 col-md-6">
+                <a href="http://codepen.io/Julie31/full/yOzyaV/" target="_blank"><img src="asset/img/random.jpg" class="img-responsive center-block img-rounded" alt="miniature exercice random quote santigol" /></a>
+                <h4>Générateur aléatoire de citation en JavaScript ( exercice FreeCodeCamp)</h4>
+            </div>
         </div>
+       
         <div class="row">
-          <div class="col-xs-12 col-md-6">
-              <a href="http://codepen.io/Julie31/full/yOzyaV/" target="_blank"><img src="asset/img/random.jpg" class="img-responsive center-block img-rounded" alt="miniature exercice random quote santigol" /></a>
-              <h4>A random quote about Santigold's Lyrics (FreeCodeCamp)</h4>
-          </div>
-          <div class="col-xs-12 col-md-6">
-            <img src="asset/img/coming_soon.jpg" class="img-responsive center-block img-rounded" alt="Miniature bientot nouvelle présentation" />
-          </div>
+            <div class="col-xs-12 col-md-6">
+                <img src="asset/img/coming_soon.jpg" class="img-responsive center-block img-rounded" alt="Miniature bientot nouvelle présentation" />
+            </div>
+            <div class="col-xs-12 col-md-6">
+                <img src="asset/img/coming_soon.jpg" class="img-responsive center-block img-rounded" alt="Miniature bientot nouvelle présentation" />
+            </div>
         </div>
     </section>
 
