hover ok _ target blank ok

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </nav>
 
     <header role="main" id="jumbotron">
-      <h1 class="text-center"><strong>Julie Alary<br/><br/>En Formation Front & Back-end <br/><br/>@ <a href="http://www.objectif3w.com" class="hvr-underline-from-left">Objectif 3W</a></strong></h1>      
+      <h1 class="text-center"><strong>Julie Alary<br/><br/>En Formation Front & Back-end <br/><br/>@ <a href="http://www.objectif3w.com" target="_blank" class="hvr-underline-from-left">Objectif 3W</a></strong></h1>      
     </header>
     
     <section role="main" id="portfolio"class="container-fluid">
