new_page_for_site_indev

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <h4> One page avec Bootstrap (exercice FreeCodeCamp)</h4>
             </div>
             <div class="col-xs-12 col-md-4">
-                <a href="http://codepen.io/Julie31/full/yOzyaV/" target="_blank"><img src="asset/img/random.jpg" class="img-responsive center-block img-rounded" alt="miniature exercice random quote santigol" /></a>
+                <a href="http://codepen.io/Julie31/full/yOzyaV/" target="_blank"><img src="asset/img/random.jpg" class="img-responsive center-block img-rounded" alt="miniature exercice random quote santigold" /></a>
                 <h4>Générateur aléatoire de citation en JavaScript ( exercice FreeCodeCamp)</h4>
             </div>
             <div class="col-xs-12 col-md-4">
@@ -65,7 +65,8 @@
        
         <div class="row">
             <div class="col-xs-12 col-md-4">
-                <img src="asset/img/coming_soon.jpg" class="img-responsive center-block img-rounded" alt="Miniature bientot nouvelle présentation" />
+                <a href="site_wordpress.html" target="_blank"><img src="http://i.imgur.com/tr0o1FW.jpg?1" class="img-responsive center-block img-rounded" alt="Miniature site association syrien ne bouge" /></a>
+                <h4>Création d'un site Wordpress pour l'association Syrien ne bouge</h4>
             </div>
             <div class="col-xs-12 col-md-4">
                 <img src="asset/img/coming_soon.jpg" class="img-responsive center-block img-rounded" alt="Miniature bientot nouvelle présentation" />
@@ -78,9 +79,9 @@
 
     <section role="main" id="skills">
         <div class="about">
-          <h2>Passionée d'informatique</h2>
-          <h3>J'ai décidé de me reconvertir professionellement</h3>
-          <h4>J'ai commencé en autodidacte et suis maintenant une formation de WebDeveloppeur</h4><br/>
+          <h2>Passionnée d'informatique</h2>
+          <h3>J'ai décidé de me reconvertir professionnellement</h3>
+          <h4>J'ai commencé en autodidacte et je suis maintenant une formation de WebDeveloppeur</h4><br/>
           <p><strong>Mes compétences :</p>
         </div>
 
