new_img_portfolio

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
        
         <div class="row">
             <div class="col-xs-12 col-md-4">
-                <a href="site_wordpress.html" target="_blank"><img src="http://i.imgur.com/tr0o1FW.jpg?1" class="img-responsive center-block img-rounded" alt="Miniature site association syrien ne bouge" /></a>
+                <a href="site_wordpress.html" target="_blank"><img src="asset/img/accueil.jpg" class="img-responsive center-block img-rounded" alt="Miniature site association syrien ne bouge" /></a>
                 <h4>Création d'un site Wordpress pour l'association Syrien ne bouge</h4>
             </div>
             <div class="col-xs-12 col-md-4">
