--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </div>
     </section>
   
-     <footer role="contentinfo"><p class="navbar-text">&ampcopy Julie Alary</p></footer>
+     <footer role="contentinfo"><p class="navbar-text">&copy Julie Alary</p></footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript">
