--- a/site_wordpress.html
+++ b/site_wordpress.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- -->
-<html>
+<html lang="fr">
   <head>
     <meta charset = "utf-8" />
     <meta name = "viewport" content ="width=device-width, user-scalable=no, initial-scale=1.0" />
@@ -32,9 +32,9 @@
 
 <body class="container-fluid">
 
-    <header class="jumbotron" role="main">
+    <header class="jumbotron" role="banner">
         <h1>Création d'un site Wordpress</h1>
-        <h2>Demande client : Rajeunir un blog WordPress existant</p>
+        <h2>Demande client : Rajeunir un blog WordPress existant</h2>
     </header>
 
     <section role="main">
