--- a/formation.html
+++ b/formation.html
@@ -32,11 +32,10 @@
 
 <body>
 
-    <header class="jumbotron" role="main">
+    <header class="jumbotron" role="banner">
         <h1>Contenus de la formation WebDevelopper</h1>
     </header>
 
-   <body>
 <div id="text-carousel" class="carousel slide" data-ride="carousel">
     <!-- Wrapper for slides -->
     <div class="row">
