--- a/site_wordpress.html
+++ b/site_wordpress.html
@@ -167,7 +167,7 @@
 
         <div class="row col_pad">
             <div class="col-md-12">
-                <p class="text-center">C'était une liste non exhaustive des changements efectués. Vous pouvez visiter le site <a href="http://syriennebouge-agissons.com/" target="_blank"> ICI . </a> De plus, d'autres modifications et optimisations seront à venir pour celui</p>
+                <p class="text-center">C'était une liste non exhaustive des changements efectués. Vous pouvez visiter le site <a href="#" target="_blank"> ICI . </a> De plus, d'autres modifications et optimisations seront à venir pour celui</p>
             </div>
         </div>
 
