--- a/cv.html
+++ b/cv.html
@@ -7,7 +7,8 @@
     <link href="css/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link rel="stylesheet" href="asset/font-awesome/css/font-awesome.min.css">
     <link href="css/style_cv.css" rel="stylesheet" media="screen">
-    	<title>"Julie Alary Personal One Page Site || CV"</title>
+    	<title>"Julie Alary || CV "</title>
+      <meta name="description" content="Vous trouverez sur cette page mon Cv, consultable en ligne et téléchargeable."/>
     <!--[if lt IE 9]>
       <link rel="stylesheet" type="text/css"href="ie-lt9.css">
       <script type="text/javascript" src="js/html5shiv.js"</script>
