--- a/formation.html
+++ b/formation.html
@@ -7,7 +7,8 @@
     <link href="css/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link rel="stylesheet" href="asset/font-awesome/css/font-awesome.min.css">
     <link href="css/style_formation.css" rel="stylesheet" media="screen">
-      <title>"Julie Alary Personal One Page Site || Formation"</title>
+      <title>"Julie Alary || Formation"</title>
+      <meta name="description" content="Vous trouverez ici le contenu de ma formation suivi à l'école Objectif 3W : php, html, css, javascript...."/>
     <!--[if lt IE 9]>
       <link rel="stylesheet" type="text/css"href="ie-lt9.css">
       <script type="text/javascript" src="js/html5shiv.js"</script>
