--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     </div>
                 </div>
             <div class="col-xs-4 col-md-4">
-                <a href="https://www.facebook.com/profile.php?id=100011904817241" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                <a href="https://www.facebook.com/JulieAlaryWebDev/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
             </div>
             <div class="col-xs-4 col-md-4">
                 <a href="https://www.linkedin.com/in/juliealary?trk=nav_responsive_tab_profile_pic" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
